package auto;

public interface AutoIF 
{
	public int getParkplatz();
	
	public String getTicket();
	
	public void setParkplatz(int p);
	
	public void setTicket(String t);
}
